--- a/Conversor/app/src/main/res/layout/activity_main.xml
+++ b/Conversor/app/src/main/res/layout/activity_main.xml
@@ -13,6 +13,7 @@
         android:layout_height="wrap_content"
         android:text="Quanto é?"
         android:textColor="#6E0ADF"
+        android:textColorHint="#000000"
         android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -31,6 +32,9 @@
         android:hint="$99.27"
         android:inputType="numberDecimal"
         android:textAlignment="center"
+        android:textColor="#E1E1E1"
+        android:textColorHint="#37040303"
+        android:textColorLink="#FF1111"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
@@ -38,8 +42,8 @@
 
     <RadioGroup
         android:id="@+id/radio_group"
-        android:layout_width="68dp"
-        android:layout_height="168dp"
+        android:layout_width="91dp"
+        android:layout_height="167dp"
         android:layout_marginTop="92dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -50,27 +54,33 @@
             android:id="@+id/radio_usb"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="USD" />
+            android:text="USD"
+            android:textColor="#000000" />
 
         <RadioButton
             android:id="@+id/radio_eur"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="EUR" />
+            android:text="EUR"
+            android:textColor="#000000" />
 
         <RadioButton
             android:id="@+id/radio_clp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="CLP" />
+            android:text="CLP"
+            android:textColor="#000000" />
     </RadioGroup>
 
     <Button
         android:id="@+id/btn_converter"
+        style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="84dp"
+        android:background="#AC74ED"
         android:text="Converter"
+        android:textColor="#FFFFFF"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/radio_group" />
@@ -81,6 +91,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="TextView"
+        android:textColor="#000000"
         android:textSize="24sp"
         android:textStyle="bold"
         android:visibility="gone"
