--- a/GenshinMyHis/app/src/main/res/layout/fragment_gallery.xml
+++ b/GenshinMyHis/app/src/main/res/layout/fragment_gallery.xml
@@ -19,4 +19,93 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <ScrollView
+        android:layout_width="368dp"
+        android:layout_height="140dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="-4dp">
+
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageButton
+                    android:id="@+id/imageButton3"
+                    android:layout_width="100dp"
+                    android:layout_height="140dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginRight="10dp"
+                    android:background="@drawable/adraken"
+                    tools:layout_editor_absoluteX="100dp"
+                    tools:layout_editor_absoluteY="302dp" />
+
+                <ImageButton
+                    android:id="@+id/imageButton4"
+                    android:layout_width="100dp"
+                    android:layout_height="140dp"
+                    android:layout_marginEnd="10dp"
+                    android:background="@drawable/ademon"
+                    tools:layout_editor_absoluteX="25dp"
+                    tools:layout_editor_absoluteY="302dp" />
+
+
+                <ImageButton
+                    android:id="@+id/imageButton5"
+                    android:layout_width="100dp"
+                    android:layout_height="140dp"
+                    android:layout_marginEnd="10dp"
+                    android:background="@drawable/adun"
+                    tools:layout_editor_absoluteX="172dp"
+                    tools:layout_editor_absoluteY="302dp" />
+
+                <ImageButton
+                    android:id="@+id/imageButton6"
+                    android:layout_width="100dp"
+                    android:layout_height="140dp"
+                    android:layout_marginEnd="10dp"
+                    android:background="@drawable/auru"
+                    tools:layout_editor_absoluteX="246dp"
+                    tools:layout_editor_absoluteY="302dp" />
+
+                <ImageButton
+                    android:id="@+id/imageButton7"
+                    android:layout_width="100dp"
+                    android:layout_height="140dp"
+                    android:layout_marginEnd="10dp"
+                    android:background="@drawable/ayu"
+                    tools:layout_editor_absoluteX="321dp"
+                    tools:layout_editor_absoluteY="302dp" />
+
+                <ImageButton
+                    android:id="@+id/imageButton9"
+                    android:layout_width="100dp"
+                    android:layout_height="140dp"
+                    android:layout_marginEnd="10dp"
+
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/achaim" />
+
+                <ImageButton
+                    android:id="@+id/imageButton10"
+                    android:layout_width="100dp"
+                    android:layout_height="140dp"
+                    android:layout_marginEnd="10dp"
+
+                    android:layout_marginRight="10dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/acyber" />
+
+
+            </LinearLayout>
+        </HorizontalScrollView>
+    </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
