--- a/GenshinMyHis/app/src/main/res/layout/fragment_home.xml
+++ b/GenshinMyHis/app/src/main/res/layout/fragment_home.xml
@@ -15,6 +15,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:textAlignment="center"
+        android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -321,7 +322,7 @@
                 android:id="@+id/imageButton8"
                 android:layout_width="wrap_content"
                 android:layout_height="234dp"
-                android:layout_marginLeft="20dp"
+                android:layout_marginLeft="5dp"
                 android:layout_marginTop="10dp"
                 android:background="@drawable/tes1"
                 tools:layout_editor_absoluteX="26dp"
@@ -342,9 +343,9 @@
 
             <ImageButton
                 android:id="@+id/imageButton11"
-                android:layout_width="300dp"
+                android:layout_width="340dp"
                 android:layout_height="350dp"
-                android:layout_marginLeft="40dp"
+                android:layout_marginLeft="5dp"
                 android:layout_marginTop="10dp"
                 android:background="@drawable/tes2" />
 
