--- a/GenshinMyHis/app/src/main/res/menu/activity_main_drawer.xml
+++ b/GenshinMyHis/app/src/main/res/menu/activity_main_drawer.xml
@@ -6,12 +6,12 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_home"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="@string/menu_home" />
+            android:icon="@drawable/a1ieb"
+            android:title="Genshin Impact" />
         <item
             android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/menu_gallery" />
+            android:icon="@android:drawable/ic_media_play"
+            android:title="Animes" />
         <item
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
